--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "firebase": "^7.24.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
