--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "firebase": "^7.24.0",
     "ml5": "^0.6.1",
-    "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hook-form": "^6.15.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "sass": "^1.45.1",
     "styled-components": "^5.2.1"
   },
   "scripts": {
