--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@capacitor/core": "^4.1.0",
     "@capacitor/geolocation": "^4.0.1",
     "@capacitor/ios": "^4.1.0",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "firebase": "^9.9.2",
     "ml5": "^1.0.0",
     "react": "^16.14.0",
@@ -16,7 +20,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.45.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
