--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pizza-app",
   "version": "0.1.0",
+  "homepage": "https://Dev0dyssey.github.io/pizza-app",
   "private": true,
   "dependencies": {
     "@capacitor/android": "^4.1.0",
@@ -24,6 +25,8 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
